--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,8 @@ html {
 }
 .container {
   display: flex;
-  align-items: center; /* vertical center */
-  justify-content: center; /* horizontal center */
+  align-items: center;
+  justify-content: center;
   height: 80%;
 }
 .welcome-text {
@@ -30,6 +30,7 @@ html {
     color: white;
 }
 .contact-btn {
+    margin-top:10px;
     padding: 12px 24px;
     font-size: 18px;
     cursor: pointer;
@@ -40,7 +41,6 @@ html {
     border-radius: 10px;
 }
 .slide-down {
-    display: none;
     text-align: center;
     color: white;
     font-family: Arial, sans-serif;
@@ -66,6 +66,7 @@ h1 {
 .projects {
     font-family: Arial, sans-serif;
     font-size: 35px;
+    margin-top: 20px;
 }
 .contact-text {
     display: flex;
@@ -73,3 +74,28 @@ h1 {
     color: white;       
 }
 
+.personal {
+    height:110px;
+    border-radius: 50%;
+}
+
+.header {
+    margin-bottom: 20px;
+}
+
+.github-logo {
+    height: 70px;
+    border-radius: 50%;
+    margin-left:55px;
+}
+
+.contact-img {
+    margin-top: 20px;
+}
+
+.linkedin-logo {
+    height: 70px;
+    border-radius: 50%;
+    float:right;
+    margin-right: 55px;
+}
