--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ h1 {
 }
 
 .github-logo {
-    height: 70px;
+    width: 70px;
     border-radius: 50%;
     margin-left:55px;
 }
@@ -99,3 +99,75 @@ h1 {
     float:right;
     margin-right: 55px;
 }
+
+
+.card {
+    width: 40%;
+    margin: 50px auto;
+    padding: 20px;
+    border-radius: 16px;
+    background-color: rgb(32, 32, 32);
+    border: 1px solid rgb(90, 90, 90);
+    color: white;
+}
+
+.title {
+    text-align: center;
+    font-size: 40px;
+}
+.item {
+    text-align: center;
+}
+.edu-institute {
+    font-size: 28px;
+}
+
+.edu-degree {
+    font-size: 18px;
+    opacity: 0.8;
+}
+
+.list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.list li {
+    margin-bottom: 6px;
+}
+.dtu-logo {
+    height: 90px;
+    object-fit: cover;
+    transform: translateY(-10px);
+}
+
+
+.skill-category {
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.skill-heading {
+    font-size: 28px;
+    margin-bottom: 15px;
+}
+
+
+.skill-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+
+.skill-icon {
+    width: 70px; 
+} 
+.github-logo1 {
+    border-radius: 50%;
+}
+
+
+
+
