--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ html {
     text-shadow: 1px 1px 2px white;
     color: white;
 }
-.contact-btn {
+.contact-btn { 
     margin-top:10px;
     padding: 12px 24px;
     font-size: 18px;
@@ -56,6 +56,7 @@ html {
     color: white;
     border: 1px solid white;
     border-radius: 10px;
+    margin-bottom: 20px;
 }
 h1 {
     font-family: Arial, sans-serif;
@@ -167,7 +168,9 @@ h1 {
 .github-logo1 {
     border-radius: 50%;
 }
-
+ .btn {
+    margin-bottom : 10px;
+ }
 
 
 
